--- a/src/index.html
+++ b/src/index.html
@@ -31,10 +31,21 @@
         <div class="field"><label for="number">Number</label><input type="number" id='number' name="number"></div>
         <div class="field"><label for="range">Range</label><input type="range" id="range" min="1" max="10" name="range"></div>
         <div class="field"><label for="tel">Tel</label><input type="tel" id="tel" pattern="12345" name="tel"></div>
-        <div class="field"><label for="text">Text</label><input type="text" id="text" name="text" required></div>  
+        <div class="field"><label for="text">Text</label><input type="text" id="text" name="text"></div>  
         <div class="field"><label for="time">Time</label><input type="time" id="time" name="time"></div>  
         <div class="field"><label for="url">Url</label><input type="url" id="url" name="url"></div>  
-        <div class="field"><label for="password">Password</label><input type="password" id="password" name="password"></div>  
+        <div class="field"><label for="password">Password</label><input type="password" id="password" name="password"></div>
+        <div class="field"><label for="checkbox">Checkbox</label><input type="checkbox" id="checkbox" name="checkbox" value="1" required></div>
+        <div class="field"><label for="select">Select</label><select name="select" id="select" required><option value="">Empty</option><option value="1">First</option></select></div>
+        <div class="field"><label for="selectmultiple">Select Multiple</label><select name="selectmultiple" id="selectmultiple" multiple><option value="1">First</option><option value="2">Second</option></select></div>
+        <div class="field">
+            <input type="radio" id="radio1" name="radio" required>
+            <label for="radio1">Radio 1</label>
+            <input type="radio" id="radio2" name="radio">
+            <label for="radio2">Radio 2</label>
+            <input type="radio" id="radio3" name="radio">
+            <label for="radio3">Radio 3</label>
+        </div>
         <input type="reset">
         <input type="submit" value="Submit">    
     </form>
