--- a/src/index.html
+++ b/src/index.html
@@ -25,9 +25,9 @@
 <body>
     <form action="./">
         <div class="field"><label for="color">Color</label><input type="color" id="color" name="color"></div>
-        <div class="field"><label for="date">Date</label><input type="date" id="date" name="date"></div>
-        <div class="field"><label for="email">Email</label><input type="email" id="email" name="email"></div>
-        <div class="field"><label for="email2">Email Match</label><input type="email" id="email2" name="email2" data-match="email"></div>
+        <div class="field"><label for="date">Date</label><input type="date" id="date" name="date" required></div>
+        <div class="field"><label for="email">Email</label><input type="email" id="email" name="email" required></div>
+        <div class="field"><label for="email2">Email Match</label><input type="email" id="email2" name="email2" data-match="email" required></div>
         <div class="field"><label for="number">Number</label><input type="number" id='number' name="number"></div>
         <div class="field"><label for="range">Range</label><input type="range" id="range" min="1" max="10" name="range"></div>
         <div class="field"><label for="tel">Tel</label><input type="tel" id="tel" pattern="12345" name="tel"></div>
@@ -36,7 +36,7 @@
         <div class="field"><label for="url">Url</label><input type="url" id="url" name="url"></div>  
         <div class="field"><label for="password">Password</label><input type="password" id="password" name="password"></div>
         <div class="field"><label for="checkbox">Checkbox</label><input type="checkbox" id="checkbox" name="checkbox" value="1" required></div>
-        <div class="field"><label for="select">Select</label><select name="select" id="select" required><option value="">Empty</option><option value="1">First</option></select></div>
+        <div class="field"><label for="select">Select</label><select name="select" id="select" required><option value="">Empty</option><option value="1">First</option><option value="2">Second</option></select></div>
         <div class="field"><label for="selectmultiple">Select Multiple</label><select name="selectmultiple" id="selectmultiple" multiple><option value="1">First</option><option value="2">Second</option></select></div>
         <div class="field">
             <input type="radio" id="radio1" name="radio" required>
