--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
         <div class="field"><label for="color">Color</label><input type="color" id="color" name="color"></div>
         <div class="field"><label for="date">Date</label><input type="date" id="date" name="date"></div>
         <div class="field"><label for="email">Email</label><input type="email" id="email" name="email"></div>
-        <div class="field"><label for="email2">Email Match</label><input type="email" id="email2" name="email2" data-match="email"></div>
+        <div class="field"><label for="email2">Email Match</label><input type="email" id="email2" name="email2" data-match="email" data-example="true"></div>
         <div class="field"><label for="number">Number</label><input type="number" id='number' name="number"></div>
         <div class="field"><label for="range">Range</label><input type="range" id="range" min="1" max="10" name="range"></div>
         <div class="field"><label for="tel">Tel</label><input type="tel" id="tel" pattern="12345" name="tel"></div>
