Complete support for Date input type For non-native support added formatting ability and local/global format option

--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,7 @@
         <input type="submit" value="Submit">    
     </form>
     <form action="./">
-        <div class="field"><label for="date">Date</label><input type="date" id="date" min="2013-03-19" max="2013-03-21" value="2013-03-22" name="date" required></div>
+        <div class="field"><label for="date">Date</label><input type="date" id="date" min="2013-03-19" max="2013-03-21" name="date" required></div>
         <input type="reset">
         <input type="submit" value="Submit">    
     </form>
@@ -47,8 +47,7 @@
         <input type="submit" value="Submit">    
     </form>
     <form action="./">
-        <div class="field"><label for="email">Email</label><input type="email" id="email" name="email" multiple required></div>
-        <!-- <div class="field"><label for="email2">Email Match</label><input type="email" id="email2" name="email2" data-match="email"></div> -->
+        <div class="field"><label for="email">Email</label><input type="email" id="email" name="email" required></div>
         <input type="reset">
         <input type="submit" value="Submit">    
     </form>
