--- a/src/index.html
+++ b/src/index.html
@@ -62,7 +62,7 @@
         <input type="submit" value="Submit">    
     </form>
     <form action="./">
-        <div class="field"><label for="tel">Tel</label><input type="tel" id="tel" pattern="12345" name="tel"></div>
+        <div class="field"><label for="tel">Tel</label><input type="tel" id="tel" data-bob name="tel"></div>
         <input type="reset">
         <input type="submit" value="Submit">    
     </form>
