--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,7 @@
 </head>
 <body>
     <form id="colorform" action="./">
-        <div class="field"><label for="color">Color</label><input type="color" id="color" name="color" required></div>
+        <div class="field"><label for="color">Color</label><input type="color" id="color" name="color" required data-message="Add a color already"></div>
         <input type="reset">
         <input type="submit" value="Submit">    
     </form>
@@ -57,7 +57,7 @@
         <input type="submit" value="Submit">    
     </form>
     <form action="./">
-        <div class="field"><label for="range">Range</label><input type="range" id="range" min="1" max="10" name="range"></div>
+        <div class="field"><label for="range">Range</label><input type="range" id="range" step="2" min="1" max="10" name="range"></div>
         <input type="reset">
         <input type="submit" value="Submit">    
     </form>
