Adding validation tests for other input types and fields

--- a/src/index.html
+++ b/src/index.html
@@ -42,6 +42,16 @@
         <input type="submit" value="Submit">    
     </form>
     <form action="./">
+        <div class="field"><label for="datetime">Datetime</label><input type="datetime" id="datetime" name="datetime" required></div>
+        <input type="reset">
+        <input type="submit" value="Submit">    
+    </form>
+    <form action="./">
+        <div class="field"><label for="datetime-local">Datetime-local</label><input type="datetime-local" id="datetime-local" name="datetime-local" required></div>
+        <input type="reset">
+        <input type="submit" value="Submit">    
+    </form>
+    <form action="./">
         <div class="field"><label for="month">Month</label><input type="month" id="month" name="month" required></div>
         <input type="reset">
         <input type="submit" value="Submit">    
@@ -52,32 +62,37 @@
         <input type="submit" value="Submit">    
     </form>
     <form action="./">
-        <div class="field"><label for="number">Number</label><input type="number" id='number' min="5" step="2" max="10" name="number"></div>
+        <div class="field"><label for="number">Number</label><input type="number" id='number' min="5" step="2" max="10" name="number" required></div>
         <input type="reset">
         <input type="submit" value="Submit">    
     </form>
     <form action="./">
-        <div class="field"><label for="range">Range</label><input type="range" id="range" step="2" min="1" max="10" name="range"></div>
+        <div class="field"><label for="range">Range</label><input type="range" id="range" step="2" min="1" max="10" name="range" required></div>
         <input type="reset">
         <input type="submit" value="Submit">    
     </form>
     <form action="./">
-        <div class="field"><label for="tel">Tel</label><input type="tel" id="tel" data-bob name="tel"></div>
+        <div class="field"><label for="tel">Tel</label><input type="tel" id="tel" name="tel" required></div>
         <input type="reset">
         <input type="submit" value="Submit">    
     </form>
     <form action="./">
-        <div class="field"><label for="text">Text</label><input type="text" id="text" pattern="12345" name="text"></div>
+        <div class="field"><label for="text">Text</label><input type="text" id="text" name="text" required></div>
         <input type="reset">
         <input type="submit" value="Submit">    
     </form>
     <form action="./">
-        <div class="field"><label for="time">Time</label><input type="time" id="time" name="time"></div>  
+        <div class="field"><label for="time">Time</label><input type="time" id="time" name="time" required></div>  
         <input type="reset">
         <input type="submit" value="Submit">    
     </form>
     <form action="./">
         <div class="field"><label for="url">Url</label><input type="url" id="url" name="url" required></div>  
+        <input type="reset">
+        <input type="submit" value="Submit">    
+    </form>
+    <form action="./">
+        <div class="field"><label for="week">Week</label><input type="week" id="week" name="week" required></div>  
         <input type="reset">
         <input type="submit" value="Submit">    
     </form>
