Adding unit tests

--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,7 @@
         <input type="submit" value="Submit">    
     </form>
     <form action="./">
-        <div class="field"><label for="date">Date</label><input type="date" id="date" min="2013-03-19" max="2013-03-21" name="date" required></div>
+        <div class="field"><label for="date">Date</label><input type="date" id="date" value="2013-03-19" min="2013-03-19" max="2015-03-21" step="2" name="date" required></div>
         <input type="reset">
         <input type="submit" value="Submit">    
     </form>
