Adding more unit tests

--- a/tests/validatr.html
+++ b/tests/validatr.html
@@ -12,8 +12,13 @@
     </script>
     <script src="../libs/jquery/jquery.js"></script>
     <script src="../src/js/validatr.js"></script>
-    <script>$.validatr.debug();</script>
+    <script>
+        $.validatr.debug();
+    </script>
+    <script src="tests_checkbox.js"></script>
+    <script src="tests_color.js"></script>
     <script src="tests_date.js"></script>
+    <script src="tests_email.js"></script>
 </head>
 <body>
     <div id="qunit"></div>
