Refactored 'number' test add unit tests for number type

--- a/src/index.html
+++ b/src/index.html
@@ -62,7 +62,7 @@
         <input type="submit" value="Submit">    
     </form>
     <form action="./">
-        <div class="field"><label for="number">Number</label><input type="number" id='number' min="5" step="2" max="10" name="number" required></div>
+        <div class="field"><label for="number">Number</label><input type="number" id='number' step=0 name="number" required></div>
         <input type="reset">
         <input type="submit" value="Submit">    
     </form>
