--- a/tests/validatr.html
+++ b/tests/validatr.html
@@ -14,15 +14,17 @@
     <script src="../src/js/validatr.js"></script>
     <script>
         $.validatr.debug();
-        //console.log($.validatr.Support);
     </script>
     <script src="tests_checkbox.js"></script>
     <script src="tests_color.js"></script>
     <script src="tests_date.js"></script>
     <script src="tests_email.js"></script>
     <script src="tests_number.js"></script>
+    <script src="tests_pattern.js"></script>
+    <script src="tests_radio.js"></script>
 </head>
 <body>
     <div id="qunit"></div>
+    <div id="qunit-fixture"></div>
 </body>
 </html>
