Adding and refining tests

--- a/tests/validatr.html
+++ b/tests/validatr.html
@@ -22,6 +22,7 @@
     <script src="tests_number.js"></script>
     <script src="tests_pattern.js"></script>
     <script src="tests_radio.js"></script>
+    <script src="tests_url.js"></script>
 </head>
 <body>
     <div id="qunit"></div>
