--- a/api.html
+++ b/api.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Validatr</title>
+    <title>API | Validatr</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Cross Browser HTML5 Form Validation.">
     <meta name="author" content="Jay Morrow">
@@ -86,39 +86,9 @@
         <hr>
         
         <div class="container">
-            <p>Validatr relies on using modern HTML5 <a href="https://developer.mozilla.org/en-US/docs/HTML/Element/Input#Attributes" target="_blank">input attributes</a> to perform validation. Validatr will use native validation whereever possible, relying on a small piece of Modernizr to test for support. If an input type is not supported or a custom test is found Validatr will use it's own ruleset to supplement native validation. In either case, the validation message is displayed in a corss-browser manner allowing for customization.</p>
-            <div class="row">
-                <div class="span4">
-                    <form action="./">
-                        <div class="alert alert-success">Form Valid!</div>
-                        <label for="email">Email</label> 
-                        <input type="email" id="email" name="email" required>
-                        <div>                    
-                            <input type="reset" class="btn btn-small" value="Reset">
-                            <input type="submit" class="btn btn-small btn-primary" value="Submit">
-                        </div>
-                    </form>
-                </div>
-                <div class="span8">
-                    <h4>JavaScript</h4>
-<pre class="prettyprint linenums">
-jQuery(function ($) {
-    $('form').validatr(); 
-});
-</pre>        
-                    <h4>HTML</h4>
-<pre class="prettyprint linenums">
-&lt;form action="./"&gt;
-    &lt;label for="email"&gt;Email&lt;/label&gt; 
-    &lt;input type="email" id="email" name="email" required&gt;
-    &lt;div&gt;
-        &lt;input type="reset" class="btn" value="Reset"&gt;
-        &lt;input type="submit" value="Submit"&gt;
-    &lt;/div&gt;
-&lt;/form&gt;
-</pre>                  
-                </div>
-            </div>
+            <h2>API</h2>
+            <h3>Attrbiutes</h3>
+            <p>Being updated. Come back soon.</p>
         </div>
     </main>
 
