--- a/tests.html
+++ b/tests.html
@@ -2,16 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Validatr</title>
+    <title>Tests | Validatr</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Cross Browser HTML5 Form Validation.">
     <meta name="author" content="Jay Morrow">
 
     <link href="assets/css/font.css" rel="stylesheet">
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
-    <link href="assets/css/validatr.min.css" rel="stylesheet">
     <link href="assets/css/site.css" rel="stylesheet">
-    <link href="assets/css/prettify.css" rel="stylesheet">
+    <link href="libs/qunit/qunit.css" rel="stylesheet">
+    <link href="assets/css/qunit.css" rel="stylesheet">
     <!--[if lte IE 7]>
     <style type="text/css">
         h1 [class^=icon-],
@@ -32,7 +32,21 @@
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="assets/ico/apple-touch-icon-72-precomposed.png">
     <link rel="apple-touch-icon-precomposed" href="assets/ico/apple-touch-icon-57-precomposed.png">
     <link rel="shortcut icon" type="image/png" href="assets/ico/favicon.png">
+
+    <script src="libs/qunit/qunit.js"></script>
+    <script src="libs/jquery/jquery.js"></script>
+    <script src="assets/js/validatr.min.js"></script>
+    <script>$.validatr.debug();</script>
+    <script src="tests/tests_checkbox.js"></script>
+    <script src="tests/tests_color.js"></script>
+    <script src="tests/tests_date.js"></script>
+    <script src="tests/tests_email.js"></script>
+    <script src="tests/tests_number.js"></script>
+    <script src="tests/tests_pattern.js"></script>
+    <script src="tests/tests_radio.js"></script>
+    <script src="tests/tests_url.js"></script>
 </head>
+
 <body>
     <header class="navbar navbar-inverse navbar-fixed-top">
         <div class="navbar-inner">
@@ -82,43 +96,16 @@
                 </p>
             </div>
         </div>
-        
+
         <hr>
-        
+
         <div class="container">
-            <p>Validatr relies on using modern HTML5 <a href="https://developer.mozilla.org/en-US/docs/HTML/Element/Input#Attributes" target="_blank">input attributes</a> to perform validation. Validatr will use native validation whereever possible, relying on a small piece of Modernizr to test for support. If an input type is not supported or a custom test is found Validatr will use it's own ruleset to supplement native validation. In either case, the validation message is displayed in a corss-browser manner allowing for customization.</p>
-            <div class="row">
-                <div class="span4">
-                    <form action="./">
-                        <div class="alert alert-success">Form Valid!</div>
-                        <label for="email">Email</label> 
-                        <input type="email" id="email" name="email" required>
-                        <div>                    
-                            <input type="reset" class="btn btn-small" value="Reset">
-                            <input type="submit" class="btn btn-small btn-primary" value="Submit">
-                        </div>
-                    </form>
-                </div>
-                <div class="span8">
-                    <h4>JavaScript</h4>
-<pre class="prettyprint linenums">
-jQuery(function ($) {
-    $('form').validatr(); 
-});
-</pre>        
-                    <h4>HTML</h4>
-<pre class="prettyprint linenums">
-&lt;form action="./"&gt;
-    &lt;label for="email"&gt;Email&lt;/label&gt; 
-    &lt;input type="email" id="email" name="email" required&gt;
-    &lt;div&gt;
-        &lt;input type="reset" class="btn" value="Reset"&gt;
-        &lt;input type="submit" value="Submit"&gt;
-    &lt;/div&gt;
-&lt;/form&gt;
-</pre>                  
-                </div>
+            <div class="alert">
+                Depending on your browser, a different number of tests will be run.
             </div>
+            <br>
+            <div id="qunit"></div>
+            <div id="qunit-fixture"></div>
         </div>
     </main>
 
@@ -130,11 +117,6 @@ jQuery(function ($) {
             <a href="https://twitter.com/jaymorrow">@jaymorrow</a>
         </p>
     </footer>
-
-    <script src="libs/jquery/jquery.js"></script>
-    <script src="assets/js/prettify.js"></script>
-    <script src="assets/js/validatr.min.js"></script>
-    <script src="assets/js/site.js"></script>
     <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="https://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 </body>
 </html>
