--- a/tests.html
+++ b/tests.html
@@ -1,122 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="utf-8">
-    <title>Tests | Validatr</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Cross Browser HTML5 Form Validation.">
-    <meta name="author" content="Jay Morrow">
+---
+layout: default
+title: Fields
+tests: true
+---
 
-    <link href="assets/css/font.css" rel="stylesheet">
-    <link href="assets/css/bootstrap.min.css" rel="stylesheet">
-    <link href="assets/css/site.css" rel="stylesheet">
-    <link href="libs/qunit/qunit.css" rel="stylesheet">
-    <link href="assets/css/qunit.css" rel="stylesheet">
-    <!--[if lte IE 7]>
-    <style type="text/css">
-        h1 [class^=icon-],
-        .brand [class^=icon-] {
-            margin-right: 10px;
-        }
-    </style>
-    <![endif]-->
-    <!--[if IE]>
-    <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-    <!--[if lte IE 7]>
-    <script src="assets/js/fonts.js"></script>
-    <![endif]-->
-
-    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="assets/ico/apple-touch-icon-144-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="assets/ico/apple-touch-icon-114-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="assets/ico/apple-touch-icon-72-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" href="assets/ico/apple-touch-icon-57-precomposed.png">
-    <link rel="shortcut icon" type="image/png" href="assets/ico/favicon.png">
-
-    <script src="libs/qunit/qunit.js"></script>
-    <script src="libs/jquery/jquery.js"></script>
-    <script src="assets/js/validatr.min.js"></script>
-    <script>$.validatr.debug();</script>
-    <script src="tests/tests_checkbox.js"></script>
-    <script src="tests/tests_color.js"></script>
-    <script src="tests/tests_date.js"></script>
-    <script src="tests/tests_email.js"></script>
-    <script src="tests/tests_number.js"></script>
-    <script src="tests/tests_pattern.js"></script>
-    <script src="tests/tests_radio.js"></script>
-    <script src="tests/tests_url.js"></script>
-</head>
-
-<body>
-    <header class="navbar navbar-inverse navbar-fixed-top">
-        <div class="navbar-inner">
-            <div class="container">
-                <a class="brand" href="/validatr">
-                    <span aria-hidden="true" class="icon-checkbox-checked"></span>
-                    Validatr
-                </a>
-                <ul class="nav">
-                    <li>
-                        <a href="fields.html">Fields</a>
-                    </li>
-                    <li>
-                        <a href="api.html">API</a>
-                    </li>
-                    <li>
-                        <a href="tests.html">Tests</a>
-                    </li>
-                </ul>
-                <div class="navbar-text">
-                    <iframe src="http://ghbtns.com/github-btn.html?user=jaymorrow&repo=validatr&type=watch&count=true" allowtransparency="true" frameborder="0" scrolling="0" width="110" height="20"></iframe>
-                    <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://jaymorrow.github.com/validatr/" data-via="jaymorrow" data-lang="en">Tweet</a>
-                </div>
-            </div>
-        </div>
-    </header>
-
-    <hr>
-
-    <main>
-        <div class="container">
-            <div class="hero-unit">
-                <h1>
-                    <span aria-hidden="true" class="icon-checkbox-checked"></span>
-                    Validatr
-                </h1>
-                <p>Cross Browser HTML5 Form Validation.</p>
-                <p>
-                    <a href="assets/validatr.zip" class="btn btn-large btn-primary">
-                        Download
-                        <span aria-hidden="true" class="icon-cloud-download"></span>
-                    </a>
-                    <a href="https://github.com/jaymorrow/validatr" class="btn btn-large">
-                        View
-                        <span aria-hidden="true" class="icon-github"></span>
-                    </a>
-                </p>
-            </div>
-        </div>
-
-        <hr>
-
-        <div class="container">
-            <div class="alert">
-                Depending on your browser, a different number of tests will be run.
-            </div>
-            <br>
-            <div id="qunit"></div>
-            <div id="qunit-fixture"></div>
-        </div>
-    </main>
-
-    <hr>
-
-    <footer class="container">
-        <p>
-            Copyright &copy; 2013 - Jay Morrow
-            <a href="https://twitter.com/jaymorrow">@jaymorrow</a>
-        </p>
-    </footer>
-    <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="https://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-</body>
-</html>
+<div class="alert">
+    Depending on your browser, a different number of tests will be run.
+</div>
+<br>
+<div id="qunit"></div>
+<div id="qunit-fixture"></div>
