--- a/api.html
+++ b/api.html
@@ -56,8 +56,8 @@ title: API
     </tbody>
 </table>
 <h4>Methods</h4>
-<h5>.validatr('addTest', name[, fn])</h5>
-<p>Add a custom test to the suite of <a href="#custom-tests">custom tests</a> that Validatr will perform on and input.</p>
+<h5 class="method">.validatr('addTest', name[, fn])</h5>
+<p>Add a custom test to the suite of <a href="#custom-tests">custom tests</a> that Validatr will perform on an input.</p>
 <pre class="prettyprint linenums">
 $('form').validatr('addTest', 'example', function (element) {});
 
@@ -91,3 +91,20 @@ $('form').validatr('addTest', {
         </tr>
     </tbody>
 </table>
+<h5 class="method">.validatr('getElements') <small class="label label-info">jQuery Object</small></h5>
+<p>Returns all of the elements that will be validated in a form. This includes any elements that exist outside of the form but have the <code>form</code> attrbiute specified.</p>
+<pre class="prettyprint linenums">$('form').validatr('getElements')</pre>                
+<p><strong>Alternate Invocation</strong></p>
+<pre class="prettyprint inline-block js">$.validatr.getElements(form)</pre>
+
+<h5 class="method">.validatr('validateElement') <small class="label label-info">Boolean</small></h5>
+<p>Returns the validity state of an element (boolean). It will not show any on-screen validation messages.</p>
+<pre class="prettyprint linenums">$('form').validatr('validateElement')</pre>                
+<p><strong>Alternate Invocation</strong></p>
+<pre class="prettyprint inline-block js">$.validatr.validateElement(element)</pre>
+
+<h5 class="method">.validatr('validateForm') <small class="label label-info">Boolean</small></h5>
+<p>Returns the validity state of a form (boolean). It will not show any on-screen validation messages.</p>
+<pre class="prettyprint linenums">$('form').validatr('validateForm')</pre>                
+<p><strong>Alternate Invocation</strong></p>
+<pre class="prettyprint inline-block js">$.validatr.validateForm(form)</pre>
